<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ShowIn="navigation_view">
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/grupo"
            android:icon="@drawable/grupo"
            android:title="@string/navGrupo"
            app:showAsAction="always" />
        <item
            android:id="@+id/contactos"
            android:checkable="false"
            android:icon="@drawable/contactos"
            android:title="@string/navContactos"
            app:showAsAction="always" />
        <item
            android:id="@+id/ajustes"
            android:checkable="false"
            android:icon="@drawable/ajustes"
            android:title="@string/navAjustes"
            app:showAsAction="always" />
    </group>
</menu>

