<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tvNombreCrearPerfil"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/etNombre"
        app:layout_constraintStart_toStartOf="@+id/etNombre"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/etNombreCrearPerfil"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="@+id/tvDesc"
        app:layout_constraintStart_toStartOf="@+id/tvDesc"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tvDescCrearPerfil"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/etDesc"
        app:layout_constraintStart_toStartOf="@+id/etDesc"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/etDescCrearPerfil"
        android:inputType="textPersonName"
        android:maxLength="100"
        app:layout_constraintEnd_toEndOf="@+id/shape_layout"
        app:layout_constraintStart_toStartOf="@+id/shape_layout"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    <RelativeLayout
        android:id="@+id/shape_layout"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/btnCambiarImagen"
        app:layout_constraintStart_toStartOf="@+id/btnCambiarImagen"
        app:layout_constraintTop_toBottomOf="@+id/etDesc"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/myCardView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="80dp"
            tools:layout_editor_absoluteX="122dp"
            tools:layout_editor_absoluteY="280dp">

            <ImageView
                android:id="@+id/ivImagenPerfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/generica" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/btnCambiarImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="cargarImagen"
        android:text="@string/btnCrearPerfil"
        app:layout_constraintEnd_toEndOf="@+id/btnSiguiente"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/btnSiguiente"
        app:layout_constraintTop_toBottomOf="@+id/shape_layout" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="btnguardar"
        android:text="@string/btnContinuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCambiarImagen" />


</androidx.constraintlayout.widget.ConstraintLayout>