<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerContactoActivity">

    <ImageView
        android:id="@+id/ivVerContacto"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/generica" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvVerNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="260dp"
            android:layout_marginRight="25dp"
            android:text="TextView"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#9C27B0" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/mostContactoInformacion"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVerNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/mostContactoMovil"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvVerDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/mostContactoDescripcion"
            android:textSize="12sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnVerNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="25dp"
            android:layout_marginRight="40dp"
            android:clickable="true"
            app:srcCompat="@drawable/nuevo" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>